comment word wrap issue resolved

--- a/src/app/pages/case-management/components/policy-violation-summary/policy-violation-summary.component.scss
+++ b/src/app/pages/case-management/components/policy-violation-summary/policy-violation-summary.component.scss
@@ -411,8 +411,8 @@ app-policy-violation-summary{
     padding: inherit;
   }
 
-
   .comment {
+    word-wrap: break-word;
     color: #8e8e8e;
     font-size: 14px;
     a {
